@startuml FinTrack_Prisma_Schema_Diagram
!theme plain
skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam classFontStyle bold
skinparam packageFontSize 12
skinparam packageFontStyle bold
skinparam arrowFontSize 9
skinparam linetype ortho
skinparam direction TB
skinparam dpi 150

title FinTrack - System Architecture (A4 Optimized)

package "Database Models" {
  class User {
    + id: Int
    + name: String
    + email: String
    + password: String
  }

  class Category {
    + id: Int
    + name: String
    + account: String
  }

  class Budget {
    + id: Int
    + budget: Float
  }

  class Transaction {
    + id: Int
    + date: DateTime
    + description: String
    + amount: Float
  }

  class MonthlySavings {
    + id: Int
    + month: DateTime
    + amount: Float
  }

  class MonthlyBudgetHistory {
    + id: Int
    + month: DateTime
    + budget: Float
    + spent: Float
    + remaining: Float
  }
}

package "Backend Controllers" {
    class AuthController {
        + register()
        + login()
        + updateUser()
    }

    class TransactionController {
        + addTransaction()
        + getTransactions()
        + updateTransaction()
    }

    class BudgetController {
        + getBudgets()
        + addBudget()
        + updateBudget()
    }

    class CategoryController {
        + getCategories()
        + addCategory()
    }

    class SavingsController {
        + getMonthlySavings()
        + storeMonthlySavings()
    }
    
    class AnalyticsController {
        + getSpendingTrends()
        + getBudgetVsActual()
    }
}


' --- Model Relationships ---
User ||--o{ Budget
User ||--o{ Category
User ||--o{ Transaction
User ||--o{ MonthlySavings
User ||--o{ MonthlyBudgetHistory

Category ||--o{ Budget

' --- Controller to Model Relationships ---
AuthController --> User : manages
TransactionController --> Transaction : manages
BudgetController --> Budget : manages
BudgetController --> MonthlyBudgetHistory : manages
CategoryController --> Category : manages
SavingsController --> MonthlySavings : manages

AnalyticsController ..> Transaction : "analyzes"
AnalyticsController ..> Budget : "analyzes"
AnalyticsController ..> MonthlyBudgetHistory : "analyzes"

@enduml 